@@ -27,6 +27,9 @@ Changes from 4.3.24 -> 4.3.25 (XX Jan 2016)
   (Thanks, Nikolai Lifanov)
 * Windows systems now have a better calculation of "Actual" memory usage    
   (Thanks, John Rothlisberger)
+* A bug in xymond_alert that could cause pages about hosts.cfg not present at inital start
+  to cause inconsistent alerting has been fixed
+* xymond_alert now reloads its hostlist at regular intervals
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
